<resources>
    <string name="app_name">FindLaw</string>
    <string name="masuk">Masuk</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="daftar">Daftar</string>
    <string name="belum_punya_akun">belum punya akun?</string>
    <string name="masuk_sebagai_pengacara">Masuk Sebagai Pengacara</string>
    <string name="masuk_sebagai_klien">Masuk Sebagai Klien</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="login">Login</string>
    <string name="kta">KTA</string>
    <string name="dokumen_penyumpahan">Dokumen Penyumpahan</string>
    <string name="isi_data_amp_unggah_berkas"><![CDATA[Isi Data & Unggah berkas]]></string>
    <string name="pengacara">Pengacara</string>
    <string name="beranda">Beranda</string>
    <string name="angga">Angga</string>
    <string name="habib">Habib</string>
    <string name="lilal">lilal</string>
    <string name="andrew">Andrew</string>
    <string name="pengacara_baru_mendaftar">Pengacara baru mendaftar</string>
    <string name="jakarta">Jakarta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms"><![CDATA[Find Law tidak menggantikan peranan Lawyer, Konsultan atau Pengacara/Penasihat yang berprofesi memberikan jasa hukum, bersedia menangani dan menyelesaikan masalah hukum Anda dan/atau membantu menangani kebutuhan hukum masyarakat. Fungsi  platform  Find law adalah sebagai perpanjangan tangan dari praktek Lawyer, Konsultan atau Pengacara/Penasihat yang punya profesi memberikan jasa hukum, bersedia menangani, menyelesaikan masalah hukum Anda dan/atau membantu menangani kebutuhan hukum masyarakat masing-masing. Find Law, tidak ditujukan untuk menggantikan fungsi konsultasi tatap muka secara langsung. Hubungi Find Law, bila Anda mengalami masalah hukum yang tidak krusial & urgen saat Lawyer, Konsultan atau Pengacara/Penasihat Hukum/Advokat, LBH, LKBH dan Lawyer/Advokat Probono yang biasa menangani Anda sedang tidak dapat dihubungi, saat Anda berada di luar jam operasional pemberian jasa hukum, atau saat Anda membutuhkan second opinion.]]></string>
    <string name="thanks">Terima kasih!</string>
    <string name="thanks1">Telah mendaftar</string>
    <string name="botm">Proses pendaftaran sedang berlangsung Data yang diberikan sedang diperiksa oleh Tim kami . Mohon tunggu Email dari kami TERIMA KASIH</string>
    <string name="menu">Menu</string>
    <string name="about">Lulusan dari Fakultas Hukum Universitas Katholik Parahyangan Bandung ini telah memiliki banyak pengalaman menangani perkara hukum keluarga sejak memulai karirnya di beberapa kantor hukum di Medan, sebelum akhirnya Rahmi memutuskan bergabung dengan FindLaw yang memang khusus melayani perkara di bidang hukum keluarga.</string>
    <string name="map_key" translatable="false">AIzaSyDv7xHsslzLFvngqbg6fuOn3d5DPoJau84</string>
</resources>