<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/purple_500"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shadows"
        android:layout_below="@+id/txt0"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/txt0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    <RelativeLayout
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textColor="@color/purple_500"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:id="@+id/txt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txt"
            android:layout_marginTop="70dp"
            android:background="@drawable/back_edt"
            android:hint="@string/email"
            android:padding="10dp"
            android:textColorHint="#6F8BA4"
            android:id="@+id/etEmail"
            />
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/etPassword"
            android:layout_height="50dp"
            android:layout_below="@+id/etEmail"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:background="@drawable/back_edt"
            android:hint="@string/password"
            android:textColorHint="#6F8BA4"
            />
        <Button
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="63dp"
            android:background="@drawable/btn_back"
            android:text="@string/masuk"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="15sp"
            android:id="@+id/btnMasuksimple"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:textSize="14sp"
            android:textColor="@color/purple_500"
            android:layout_marginTop="51dp"
            android:id="@+id/already"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/btnMasuksimple"
            android:layout_marginLeft="10dp" />
        <TextView
            android:onClick="go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginStart="3dp"
            android:text="@string/daftar"
            android:layout_toEndOf="@+id/already"
            android:layout_toRightOf="@+id/already"
            android:layout_below="@+id/btnMasuksimple"
            android:layout_marginTop="51dp"
            android:id="@+id/daftar"
            android:layout_marginLeft="3dp" />

        <Button
            android:id="@+id/btnBelow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_back"
            android:onClick="on"
            android:text="@string/masuk_sebagai_pengacara"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="bold" />


    </RelativeLayout>


</RelativeLayout>