<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaftarPengacaraActivity"
    android:background="@color/purple_500">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shadows"
        android:layout_below="@+id/txt4"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    <RelativeLayout
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isi_data_amp_unggah_berkas"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/txt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/txt"
            android:layout_marginTop="10dp"
            android:background="@drawable/back_edt"
            android:hint="Nama"
            android:padding="10dp"
            android:textColorHint="#6F8BA4"
            android:id="@+id/etNama"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/etNama"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_edt"
            android:hint="Alamat Email"
            android:padding="10dp"
            android:textColorHint="#6F8BA4"
            android:id="@+id/etEmail"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/etEmail"
            android:layout_marginTop="20dp"
            android:background="@drawable/back_edt"
            android:hint="@string/tanggal_lahir"
            android:padding="10dp"
            android:textColorHint="#6F8BA4"
            android:id="@+id/etLahir"
            />
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/etPassword"
            android:layout_height="50dp"
            android:layout_below="@+id/etLahir"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/back_edt"
            android:hint="@string/password"
            android:textColorHint="#6F8BA4"

            />
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/kta"
            android:layout_height="50dp"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/back_edt"
            android:hint="@string/kta"
            android:textColorHint="#6F8BA4"
            android:drawableEnd="@drawable/ic_baseline_present_to_all_24"
            android:drawableRight="@drawable/ic_baseline_present_to_all_24" />
        <EditText
            android:drawableEnd="@drawable/ic_baseline_present_to_all_24"
            android:layout_width="match_parent"
            android:id="@+id/documen"
            android:layout_height="50dp"
            android:layout_below="@+id/kta"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/back_edt"
            android:hint="@string/dokumen_penyumpahan"
            android:textColorHint="#6F8BA4"
            android:drawableRight="@drawable/ic_baseline_present_to_all_24" />
        <EditText
            android:drawableEnd="@drawable/ic_baseline_present_to_all_24"
            android:layout_width="match_parent"
            android:id="@+id/ktp"
            android:layout_height="50dp"
            android:layout_below="@+id/documen"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/back_edt"
            android:hint="KTP"
            android:textColorHint="#6F8BA4"
            android:drawableRight="@drawable/ic_baseline_present_to_all_24" />
        <Button
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_back"
            android:text="@string/daftar"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="15sp"
            android:id="@+id/btnMasuk"
            />




    </RelativeLayout>

</RelativeLayout>