<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelesaiDaftarActivity"

    android:background="@color/purple_500">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundimg"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hand"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="290dp"
            android:id="@+id/handimg"

            />
        <TextView
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks"
            android:layout_below="@+id/handimg"
            android:textSize="16sp"
            android:id="@+id/yop"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks1"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_below="@+id/yop"
            android:id="@+id/nop"
            />
        <TextView
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botm"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_below="@+id/nop"
            android:gravity="center_horizontal" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="40dp"
            android:text="Kembali ke Login"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:id="@+id/loginPengacara"
            />


    </RelativeLayout>

</RelativeLayout>