<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsConditionActivity"
    android:background="@color/purple_500">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shadows"
        android:layout_below="@+id/menu"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />
    <ImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/menuicon"
        android:layout_marginTop="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/app_name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt"
        android:text="@string/beranda"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"

        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mapicon"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/app_name" />



    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        >
        <ScrollView
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:includeFontPadding="true"
                android:textSize="20sp"
                android:textAlignment="center"
                android:padding="10dp"
                android:lineSpacingExtra="8sp"
                android:gravity="center_horizontal" />
        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottombar"

            >
            <androidx.cardview.widget.CardView
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/navigation_back"
                android:gravity="center_vertical"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    >
                    <LinearLayout
                        android:gravity="center_vertical|center_horizontal"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <ImageView

                            android:id="@+id/btnHome"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/homeblack"
                            />
                        <TextView
                            android:id="@+id/txthome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/beranda"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/pengacara"
                        android:gravity="center_vertical|center_horizontal"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/law"
                            android:id="@+id/law"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pengacara"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/search"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Cari"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/profile"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Profile"
                            />
                    </LinearLayout>


                </LinearLayout>



            </androidx.cardview.widget.CardView>
        </com.google.android.material.bottomnavigation.BottomNavigationView>


    </RelativeLayout>

</RelativeLayout>